# LRWebsiteBackend

./: .env.example  .gitignore  README.md  postman_collection.json  pyproject.toml  temp.csv
app/: __init__.py  config.py  logging_config.py  main.py
app/models/: articles.py  boutique.py  church_info.py  events.py  home_groups.py  pastoral_team.py  services.py  vision.py
app/routers/: articles.py  boutique.py  church_info.py  events.py  home_groups.py  pastoral_team.py  services.py  vision.py
app/services/: cache_service.py  docs_service.py  sheets_service.py
tests/: test_api.py  test_cache.py
