[tool.poetry]
name = "lr-website-backend"
version = "0.1.0"
description = "Backend API for Église LaRencontre website"
authors = ["LaRencontre Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic-settings = "^2.0.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
